--- a/broker.service
+++ b/broker.service
@@ -4,10 +4,14 @@ After=docker.service
 Requires=docker.service
 
 [Service]
+EnvironmentFile=/etc/environment
+
+
 TimeoutStartSec=0
 ExecStartPre=-/usr/bin/docker kill broker
 ExecStartPre=-/usr/bin/docker rm broker
 ExecStartPre=/usr/bin/docker pull rabbitmq:3.4.3
 ExecStart=/usr/bin/docker run --name broker -p 5672:5672 rabbitmq:3.4.3
-ExecStartPost=/usr/bin/etcdctl set /services/viotech/broker/host %H 
+ExecStartPost=
+ExecStartPost=/usr/bin/etcdctl set /services/viotech/broker/host ${COREOS_PRIVATE_IPV4}
 ExecStop=/usr/bin/docker stop broker
